Update media query to fix the Copy button on mobile so that it is center after appearing.

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -127,10 +127,14 @@ button[disabled] {
 }
 
 @media (max-width: 690px) {
-  .btn {
+  .btn, .passwordBtn {
     font-size: 1rem;
     margin: 16px 0px 0px 0px;
     padding: 10px 15px;
+  }
+
+  .passwordBtn {
+    margin-left: 29%;
   }
 
   #password {
@@ -139,7 +143,7 @@ button[disabled] {
 }
 
 @media (max-width: 500px) {
-  .btn {
+  .btn, .passwordBtn {
     font-size: 0.8rem;
   }
 }
